# rusty-dbg

./: Cargo.toml  README.md  a.out
gui/: package-lock.json  package.json
gui/src/: App.svelte
gui/src/components/: DisassemblyWindow.svelte  HexView.svelte  Menu.svelte  Toolbar.svelte
rusty-dbg-gui/: package-lock.json  package.json
rusty-dbg-gui/src/: App.svelte
rusty-dbg-gui/src-tauri/: Cargo.toml  tauri.conf.json
rusty-dbg-gui/src-tauri/src/: api.rs  lib.rs  main.rs
rusty-dbg-gui/src/components/: HexView.svelte  Menu.svelte  Toolbar.svelte
src/: _core.rs  breakpoint.rs  command.rs  core.rs  debugger.rs  dwarf.rs  functions.rs  gimliTesting.rs  lib.rs  main.rs  map.rs  memory.rs  process.rs  repl.rs  stack_unwind.rs
src/commands/: backtrace.rs  breakpoint.rs  command_trait.rs  control.rs  disassemble.rs  dump_hex.rs  exit.rs  mod.rs  offset.rs  patch.rs  registers.rs  sections.rs
src/core/: backtrace.rs  breakpoint.rs  breakpoint_helpers.rs  debugger.rs  disassembler.rs  map.rs  memory.rs  mod.rs  process.rs  process_control.rs  registers.rs  stepping.rs  symbols.rs
test-programm/: Cargo.toml
test-programm-c/: a.out  main.c
test-programm/src/: main.rs
test_programm/src/: main.rs
