workspace = { members = ["test_programm"] }
[package]
name = "rusty-dbg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.29.0", features = ["process", "ptrace"] }
libc = "0.2.164"
gimli = "0.31.1"
memmap2 = "0.9.4"
num_cpus = "1"
object = { version = "0.36.0", features = ["wasm", "write"] }
addr2line = "0.24.2"
rustc-demangle = "0.1.24"
goblin = "0.10.0"
